<resources>
    <string name="app_name">Video Player</string>

    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="controller_not_video_file">It isn\'t video file.</string>
    <string name="controller_file_not_exists">File isn\'t exists</string>
    <string name="history">History</string>
    <string name="sort">Sort</string>
    <string name="view_stile">View stile</string>
    <string name="cloud_sign_in">Sign In</string>
    <string name="button_fullscreen">fullscreen</string>

    <!-- Strings related to login -->
    <string name="error_auth">Invalid pass or email.</string>
    <string name="progress_dialog_title">Authorization</string>
    <string name="progress_dialog_massage">Connecting…</string>
    <string name="sign_in">Sign In</string>
    <string name="menu_logout">Log Out</string>
    <string name="play_services_error">Google Play Services error.</string>
    <string name="user_with_email_exist">Auth fail. Please verify your input email.</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_register">Register</string>
    <string name="edittext_email">Your email</string>
    <string name="edittext_password">Your password</string>
    <string name="toolbar_sign_in">Sign In</string>
    <string name="textview_authorization">Authorization</string>
    <string name="textview_or">or</string>
    <string name="pass_helper">Enter min 6 chars</string>
    <string name="pass_err_empty">Invalid password</string>
    <string name="pass_err_short">Pass is short</string>
    <string name="mail_helper">Enter email</string>
    <string name="mail_err">Invalid email</string>
    <string name="menuitem_history">History</string>
    <string name="toolbar_history">Recent Hystory</string>
    <string name="sign_in_google_err">Authentication failed.</string>
    <string name="mail_empty">Please enter email.</string>

    <string-array name="spinner_list">
        <item>Downloads</item>
        <item>Video</item>
        <item>Select video...</item>
    </string-array>
</resources>
