<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/itemViewStyle"
        android:icon="@drawable/ic_view_module_black_24dp"
        android:orderInCategory="0"
        android:title="@string/view_stile"
        app:showAsAction="always" />


    <item
    android:id="@+id/itemSort"
    android:icon="@drawable/ic_sort_black_24dp"
    android:orderInCategory="1"
    android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSetting"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:orderInCategory="1"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/itemHistory"
                android:icon="@drawable/ic_history_black_24dp"
                android:orderInCategory="2"
                android:title="@string/history"
                android:actionLayout="@layout/menuitem_history"
                app:showAsAction="never" />

            <item
                android:id="@+id/itemSignIn"
                android:icon="@drawable/ic_cloud_queue_black_24dp"
                android:orderInCategory="3"
                android:title="@string/cloud_sign_in"
                app:showAsAction="never"
                android:checkable="true" />
        </menu>
    </item>
</menu>