<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_auth_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/toolbar_sign_in" >

        <ImageView
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_cloud_queue_black_24dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_auth_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/textview_authorization"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="sans" />

    <com.rey.material.widget.ProgressView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:pv_autostart="false"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        android:id="@+id/progressView"
        android:layout_alignBottom="@+id/editTextEmail"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="45dp"
        style="@style/Material.Drawable.CircularProgress" />

    <com.rey.material.widget.EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar_auth_activity"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="80dp"
        android:hint="@string/edittext_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="18sp"
        app:et_autoCompleteMode="single"
        app:et_dividerColor="@color/colorPrimary"
        app:et_dividerErrorColor="@color/colorAccent"
        app:et_dividerHeight="2dp"
        app:et_helper="@string/mail_helper"
        app:et_labelEnable="true"
        app:et_supportMode="helperWithError"
        app:et_supportTextColor="@color/colorPrimaryDark"
        app:et_supportTextErrorColor="@color/colorAccent" />

    <com.rey.material.widget.EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginBottom="20dp"
        android:hint="@string/edittext_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="18sp"
        app:et_dividerColor="@color/colorPrimary"
        app:et_dividerErrorColor="@color/colorAccent"
        app:et_dividerHeight="2dp"
        app:et_helper="@string/pass_helper"
        app:et_supportMode="helperWithError"
        app:et_supportTextColor="@color/colorPrimaryDark"
        app:et_supportTextErrorColor="@color/colorAccent">

    </com.rey.material.widget.EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextPassword"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <com.rey.material.widget.Button
            android:id="@+id/buttonSignIn"
            style="@style/Material.Drawable.Ripple.Wave.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_sign_in"
            app:rd_enable="true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textview_or"
            android:textAllCaps="false" />

        <com.rey.material.widget.Button
            android:id="@+id/buttonRegister"
            style="@style/Material.Drawable.Ripple.Wave.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_register"
            app:rd_enable="true" />

    </LinearLayout>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/bSignInGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentBottom="false"
        android:layout_alignRight="@+id/textView3"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="60dp" />


</RelativeLayout>